--- a/.env
+++ b/.env
@@ -9,12 +9,12 @@ LINK_ASSETS=true
 
 # Databases
 # ---------
-DB_DSN           = mysql:host=localhost;port=3306;dbname=service-storage
+DB_DSN           = mysql:host=db;port=3306;dbname=service-storage
 DB_USERNAME      = api_dbu
 DB_PASSWORD      = api_pass
 DB_TABLE_PREFIX  =
 
-TEST_DB_DSN           = mysql:host=localhost;port=3306;dbname=service-storage
+TEST_DB_DSN           = mysql:host=db;port=3306;dbname=service-storage
 TEST_DB_USERNAME      = root
 TEST_DB_PASSWORD      = root
 
