--- a/docker/nginx/vhost.conf
+++ b/docker/nginx/vhost.conf
@@ -2,7 +2,8 @@
 server {
     listen 80 default;
 
-    root /app/web;
+    # root /app/web;
+    root /app/api/web;
     index index.php index.html;
 
     server_name service-storage.dev;
