--- a/.env
+++ b/.env
@@ -14,21 +14,16 @@ DB_USERNAME      = api_dbu
 DB_PASSWORD      = api_pass
 DB_TABLE_PREFIX  =
 
-TEST_DB_DSN           = mysql:host=db;port=3306;dbname=service-storage
+TEST_DB_DSN           = mysql:host=db;port=3306;dbname=service-storage-test
 TEST_DB_USERNAME      = root
 TEST_DB_PASSWORD      = root
 
 # Urls
 # ----
 # unused
-FRONTEND_URL    = http://service-storage.dev
-BACKEND_URL     = http://backend.service-storage.dev
-STORAGE_URL     = http://storage.service-storage.dev
-
-# Other
-# -----
-SMTP_HOST = mailcatcher
-SMTP_PORT = 1025
+FRONTEND_URL = http://service-storage.dev
+BACKEND_URL  = http://backend.service-storage.dev
+STORAGE_URL  = http://storage.service-storage.dev
 
 FRONTEND_COOKIE_VALIDATION_KEY = nHE6Kzwv6CWG2kGTrv-JT1gjNGtC0s-R
 BACKEND_COOKIE_VALIDATION_KEY = 7BxR4xM6OSoKFiIzjPq9pTATYlG_Ym_j
