Reordered project structure. Added console controller & migrations.

--- a/.env
+++ b/.env
@@ -20,8 +20,9 @@ TEST_DB_PASSWORD      = root
 
 # Urls
 # ----
+API_ENDPOINT = http://service-storage.dev/api/v1/instances
+API_URL      = http://service-storage.dev
 # unused
-FRONTEND_URL = http://service-storage.dev
 BACKEND_URL  = http://backend.service-storage.dev
 STORAGE_URL  = http://storage.service-storage.dev
 
