--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -9,4 +9,4 @@ xdebug.remote_connect_back = On
 
 [extensions]
 zend_extension="/usr/local/lib/php/extensions/no-debug-non-zts-20151012/xdebug.so"
-extension=php_intl.dll
+;extension=php_intl.dll
