--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.5.0",
+        "ext-intl": "*",
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "^2.0.0",
         "yiisoft/yii2-swiftmailer": "^2.0.0",
